--- a/index.html
+++ b/index.html
@@ -31,21 +31,16 @@
                                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
+                                <a class="nav-link" href="./page/page1.html">page1</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                                <a class="nav-link" href="./page/page2.html">page2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./page/page3.html">page3</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./page/page4.html">page4</a>
                             </li>
                         </ul>
                     </div>
