Page1-page4_nav

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <title>mange</title>
 </head>
 <body>
-    <header id="start">
-        <a href="./page/contact.html"></a>
-        <h1>les recette du gourmandeur</h1>
-        <hr>
+    <header id="start" class="d-flex bg-dark text-light ps-5">
+        <h1>lorem ispon</h1>
     </header>
-    <nav class="navbar navbar-expand-lg navbar bg-dark border-bottom border-body" data-bs-theme="dark">">
+    <nav class="navbar navbar-expand-lg navbar bg-dark border-bottom border-body " data-bs-theme="dark">">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Menu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
